--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
   // 清单文件的版本，这个必须写，而且必须是2
-  "manifest_version": 2,
+  "manifest_version": 3,
   // 插件的名称
-  "name": "demo",
+  "name": "PixivHelper",
   // 插件的版本
-  "version": "1.0.0",
+  "version": "1.0.1",
   // 插件描述
   "description": "PixivHelper",
   // 会一直常驻的后台JS或后台页面
   "background": {
-    "page": "background.html"
+    "service_worker": "background.js"
   },
   "icons": {
     "16": "icon/pixiv.png",
@@ -20,10 +20,9 @@
   "permissions": [
     "cookies",
     "tabs", // 标签
-    "webRequest", // web请求
-    "webRequestBlocking", // 阻塞式web请求
-    "storage", // 插件本地存储
-    "http://*/*", // 可以通过executeScript或者insertCSS访问的网站
-    "https://*/*" // 可以通过executeScript或者insertCSS访问的网站
+    "webRequest" // web请求
+  ],
+  "host_permissions": [
+    "<all_urls>"
   ]
 }
